Fix search button position on mobile

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -238,7 +238,7 @@
     right: 0.5rem !important;
   }
 
-  .searchBox_node_modules-\@docusaurus-theme-classic-lib-theme-Navbar-Search-styles-module {
+  [class^="searchBox"] {
     right: 3rem !important;
   }
 
